# local-video-dubbing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: gui.py  resources.py  test.ipynb
src/.streamlit/: config.toml
src/tools/: combining.py  extract_audio_video.py  join_audios.py  speech_recognition.py  split_silence.py  translate.py  voice_background.py
