[project]
name = "local-video-dubbing"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.8.0",
    "streamlit==1.51.0",
    "torchaudio==2.8.0",
    "soundfile==0.13.1",
    "transformers==4.57.1",
    "pydub==0.25.1",
    "kokoro==0.9.4"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []